[gd_scene load_steps=23 format=3 uid="uid://ddehe8606pv7p"]

[ext_resource type="Script" uid="uid://d8fyt2q3a2yy" path="res://scenes/combat/combat.gd" id="1_5vqsm"]
[ext_resource type="Script" uid="uid://rhakbff6ojk6" path="res://scenes/combat/xp_bar.gd" id="2_6aonj"]
[ext_resource type="Resource" uid="uid://d2igjllja3i3e" path="res://data/enemies/Scav.tres" id="2_ijgaf"]
[ext_resource type="Script" uid="uid://c0o8e6r857xxp" path="res://scenes/combat/enemy_health_bar.gd" id="3_pqpfu"]
[ext_resource type="Script" uid="uid://utc3vkjqe84k" path="res://scenes/combat/vitality_bar.gd" id="4_jgg25"]
[ext_resource type="Script" uid="uid://bi1ken64obsnk" path="res://scenes/combat/player_health_bar.gd" id="5_4voa6"]
[ext_resource type="Script" uid="uid://b700sonptgjv2" path="res://scenes/combat/player_health_regen_bar.gd" id="7_ijgaf"]
[ext_resource type="Script" uid="uid://bh7i5grp3fn3k" path="res://scenes/combat/auto_attack_progress.gd" id="8_uakg0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8cw2p"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4a6i5"]
bg_color = Color(0.616268, 0.282108, 0.286734, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wko5l"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4voa6"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgg25"]
bg_color = Color(0.525518, 0.00594866, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltalu"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vqsm"]
bg_color = Color(0.891143, 0.728768, 0.0628706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dmww"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.540923, 0.919773, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijgaf"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uakg0"]
bg_color = Color(0.068019, 0.543059, 0.2032, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwckk"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrrmw"]
bg_color = Color(0.0666667, 0.541176, 0.203922, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2sm1"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_si0bq"]
bg_color = Color(0.813032, 0.521562, 0.310276, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vqsm")
enemy_data = ExtResource("2_ijgaf")

[node name="VitalityBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -98.0
offset_right = 1.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "
"
theme_override_styles/background = SubResource("StyleBoxFlat_8cw2p")
theme_override_styles/fill = SubResource("StyleBoxFlat_4a6i5")
rounded = true
show_percentage = false
script = ExtResource("4_jgg25")

[node name="VitalityXPLabel" type="Label" parent="VitalityBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.5
offset_top = -31.5
offset_right = -420.5
offset_bottom = -8.5
grow_horizontal = 2
grow_vertical = 2
text = "Vitality 40050/50000"

[node name="CombatLogScroll" type="ScrollContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_top = 391.0
offset_right = 264.0
offset_bottom = 647.0

[node name="CombatLog" type="Label" parent="CombatLogScroll"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wko5l")
text = "Combat Log:
"
autowrap_mode = 2

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(256, 24)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 888.0
offset_top = -13.0
offset_right = -8.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_4voa6")
theme_override_styles/fill = SubResource("StyleBoxFlat_jgg25")
value = 67.0
show_percentage = false
script = ExtResource("3_pqpfu")

[node name="EnemyHealthLabel" type="Label" parent="EnemyHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="XPBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -64.0
offset_right = 1.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "
"
theme_override_styles/background = SubResource("StyleBoxFlat_ltalu")
theme_override_styles/fill = SubResource("StyleBoxFlat_5vqsm")
rounded = true
show_percentage = false
script = ExtResource("2_6aonj")
skill_name = "Accuracy"

[node name="XPLabel" type="Label" parent="XPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -25.5
offset_right = -393.0
offset_bottom = -2.5
grow_horizontal = 2
grow_vertical = 2
text = "Skill Name 50000/50000"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 7.0
offset_right = 256.0
offset_bottom = 151.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3dmww")

[node name="CombatInfo" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -64.0
offset_right = 144.0
offset_bottom = 63.0
grow_vertical = 2
text = "Current Skill <lvl>
Lvl <lvl>
Player HP: <hp>
XP: <xp>
Enemy HP: <hp>"

[node name="HPRegenTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="PlayerHealthContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 312.0
offset_right = 264.0
offset_bottom = 361.0

[node name="PlayerHealthBar" type="ProgressBar" parent="PlayerHealthContainer"]
custom_minimum_size = Vector2(256, 24)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_ijgaf")
theme_override_styles/fill = SubResource("StyleBoxFlat_uakg0")
value = 67.0
show_percentage = false
script = ExtResource("5_4voa6")

[node name="PlayerHealthLabel" type="Label" parent="PlayerHealthContainer/PlayerHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerHealthRegenBar" type="ProgressBar" parent="PlayerHealthContainer" node_paths=PackedStringArray("regen_timer", "combat_script")]
custom_minimum_size = Vector2(0, 4)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_gwckk")
theme_override_styles/fill = SubResource("StyleBoxFlat_mrrmw")
value = 20.0
show_percentage = false
script = ExtResource("7_ijgaf")
regen_timer = NodePath("../../HPRegenTimer")
combat_script = NodePath("../..")

[node name="PlayerAutoAttackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AttackButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackButton" type="Button" parent="AttackButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
focus_mode = 0
text = "Attack"

[node name="AutoAttackProgress" type="ProgressBar" parent="AttackButtonContainer" node_paths=PackedStringArray("attack_timer", "combat_script")]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_h2sm1")
theme_override_styles/fill = SubResource("StyleBoxFlat_si0bq")
show_percentage = false
script = ExtResource("8_uakg0")
attack_timer = NodePath("../../PlayerAutoAttackTimer")
combat_script = NodePath("../..")
